# fstree

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  flake.nix  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker.yml  publish.yml  release.yml
assets/: demo.tape
src/: app.rs  git.rs  icons.rs  main.rs  sort.rs  tui.rs  utils.rs  view.rs
tests/: cli.rs
